[gd_scene load_steps=9 format=3 uid="uid://gh68hvubiyhk"]

[ext_resource type="Script" path="res://scrips/plataformas.gd" id="1_n263e"]
[ext_resource type="Texture2D" uid="uid://dlpht5e1xlpgm" path="res://assets/bosses/gusano/platafor.png" id="2_jioe1"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_vxpk1"]
b = Vector2(440, 0)

[sub_resource type="Animation" id="Animation_f2lwe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2d80p"]
resource_name = "new_animation"
length = 6.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D2:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-504, 0), Vector2(488, 0)]
}

[sub_resource type="Animation" id="Animation_wv25y"]
resource_name = "new_animation_2"
length = 6.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D2:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(488, 0), Vector2(-504, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h35p8"]
_data = {
"RESET": SubResource("Animation_f2lwe"),
"new_animation": SubResource("Animation_2d80p"),
"new_animation_2": SubResource("Animation_wv25y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gewr"]
size = Vector2(458, 98)

[node name="plataformas" type="Node2D"]
script = ExtResource("1_n263e")

[node name="StaticBody2D2" type="AnimatableBody2D" parent="." groups=["no_saltable"]]

[node name="Plataforma" type="Sprite2D" parent="StaticBody2D2"]
texture_filter = 1
position = Vector2(-4, 32)
scale = Vector2(7.125, 5.5)
texture = ExtResource("2_jioe1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-224, 0)
shape = SubResource("SegmentShape2D_vxpk1")
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h35p8")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(140, 55)
scale = Vector2(62, 6.5)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5, 39)
shape = SubResource("RectangleShape2D_8gewr")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
